# skillmark

./: .pre-commit-hooks.yaml  Cargo.toml  LICENSE  README.md  action.yml
.github/workflows/: docs.yml
crates/skillmark/: Cargo.toml
crates/skillmark-core/: Cargo.toml
crates/skillmark-core/src/: config.rs  fixer.rs
crates/skillmark-core/src/output/: markdown.rs  sarif.rs  terminal.rs
crates/skillmark-core/tests/: integration.rs
crates/skillmark/src/: main.rs
crates/skillmark/tests/: cli.rs
crates/skillplane/: Cargo.toml
crates/skillplane-core/: Cargo.toml
crates/skillplane-core/src/: config.rs  discovery.rs  fixer.rs  lib.rs  linter.rs  model.rs  parser.rs  scorer.rs  validator.rs
crates/skillplane-core/src/output/: json.rs  mod.rs  sarif.rs  terminal.rs
crates/skillplane-core/tests/: integration.rs
crates/skillplane/src/: main.rs
crates/skillplane/tests/: cli.rs
docs/simmer/: iteration-1-candidate.md  iteration-2-candidate.md  iteration-3-candidate.md  trajectory.md
docs/superpowers/plans/: 2026-04-10-skillplane-cli.md  2026-04-10-skillplane-core.md
docs/superpowers/specs/: 2026-04-09-skillplane-design.md
tests/fixtures/valid-skill/: SKILL.md
website/: astro.config.mjs  package-lock.json
website/src/content/docs/: index.mdx
website/src/content/docs/getting-started/: first-check.md  installation.md  understanding-output.md
website/src/content/docs/guides/: configuration.md  fix-mode.md
website/src/content/docs/integration/: github-action.md  pre-commit-hook.md
website/src/content/docs/reference/: cli.md
website/src/content/docs/rules/: errors.md  (+2 more)
website/src/styles/: custom.css
(+2 files in other folders)
