[package]
name = "skillmark-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for skillmark — Agent Skills linter, validator, and scorer"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
unicode-normalization = "0.1"
walkdir = "2"
regex = "1"
toml = "0.8"
thiserror = "2"
once_cell = "1"

[dev-dependencies]
tempfile = "3"
insta = { version = "1", features = ["yaml"] }
