[package]
name = "skillmark"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for skillmark — Agent Skills linter, validator, and scorer"

[dependencies]
skillmark-core = { path = "../skillmark-core" }
clap = { version = "4", features = ["derive"] }
colored = "2"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serde_json = "1"
