[package]
name = "skillplane"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI for skillplane — Agent Skills linter, validator, and scorer"

[dependencies]
skillplane-core = { path = "../skillplane-core" }
clap = { version = "4", features = ["derive"] }
colored = "2"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serde_json = "1"
